# go-poly-market-and-book

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  main.go
.claude/polymarket-trading/: SKILL.md
.claude/polymarket-trading/assets/rust-starter/: Cargo.toml
.claude/polymarket-trading/references/: api-pages-index.md  rest-endpoints.md  rust-sdk.md  websockets.md
.claude/polymarket-trading/references/api-pages/: advanced_neg-risk.md  api-reference_authentication.md  api-reference_bridge_create-withdrawal-addresses.md  api-reference_bridge_get-a-quote.md  api-reference_bridge_get-supported-assets.md  api-reference_bridge_get-transaction-status.md  api-reference_builders_get-aggregated-builder-leaderboard.md  api-reference_builders_get-daily-builder-volume-time-series.md  api-reference_clients-sdks.md  api-reference_comments_get-comments-by-comment-id.md  api-reference_comments_get-comments-by-user-address.md  api-reference_comments_list-comments.md  api-reference_core_get-closed-positions-for-a-user.md  api-reference_core_get-current-positions-for-a-user.md  api-reference_core_get-positions-for-a-market.md  api-reference_core_get-top-holders-for-markets.md  api-reference_core_get-total-value-of-a-users-positions.md  api-reference_core_get-user-activity.md  (+119 more)
internal/api/: clob.go  gamma.go  ratelimit.go
internal/collector/: collector.go
internal/config/: config.go
internal/db/: migrations.go  postgres.go
internal/logging/: logging.go
internal/models/: market.go  slug.go
internal/scanner/: scanner.go  sluggen.go  types.go
(+6 files in other folders)
